THRIFT-3401 Nested collections emit Objective-C code that cannot compile Client: Cocoa Patch: Kevin Wooten <kevin@wooten.com>

This closes #665